--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@rushstack/eslint-patch": "^1.11.0",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20.17.50",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.1.8",
     "eslint-plugin-import": "^2.31.0",
@@ -30,7 +30,8 @@
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "tailwindcss": "^4.1.7",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
