--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@types/canvas-confetti": "^1.9.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/kv": "^3.0.0",
