feat: Add 404 error page, update header component, and adjust project configurations.

--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ NEXT_PUBLIC_EXTENSION_PRICE_PER_WEEK=150
 # Pricing - Consultations
 NEXT_PUBLIC_CONSULTATION_PRICE=170
 NEXT_PUBLIC_RETURNING_CONSULTATION_PRICE=100
+
+NEXT_PUBLIC_ENABLE_CALENDAR_PAGE=false
